@@ -33,6 +33,7 @@ headers
 #include <tny-folder-observer.h>
 #include <tny-folder-store-observer.h>
 #include <tny-folder-store-change.h>
+#include <tny-folder-stats.h>
 
 #define NO_IMPORT_PYGOBJECT
 #include "pygobject.h"
